--- a/exercises/0-4-newsletter-table/index.html
+++ b/exercises/0-4-newsletter-table/index.html
@@ -5,8 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Document</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
 	</head>
-	<body>
+	<body style="background: rgb(207, 207, 207)">
 		<style>
 			html,
 			body,
@@ -140,35 +143,79 @@
 				box-sizing: border-box;
 				max-width: 600px;
 				margin: 0 auto;
+				font-family: 'Open Sans', sans-serif;
+				font-size: 14px;
+				line-height: 150%;
+				background: white;
+				border-radius: 8px;
 			"
 		>
 			<tr style="border-bottom: 1px solid black">
-				<td style="text-align: center">
-					<span>5 june 2023</span>
-				</td>
-				<td style="text-align: center; border-left: 1px solid black; border-right: 1px solid black; padding: 12px 0">
-					<h1>newsletter</h1>
-				</td>
-				<td style="text-align: center">Edition #2</td>
+				<td style="padding: 12px; text-align: center; vertical-align: middle">About</td>
+				<td style="padding: 12px; text-align: center; vertical-align: middle">Portfolio</td>
+				<td style="padding: 12px; text-align: center; vertical-align: middle">Sections</td>
+				<td style="padding: 12px; text-align: center; vertical-align: middle">News</td>
+				<td style="padding: 12px; text-align: center; vertical-align: middle">Daily</td>
+				<td style="padding: 12px; text-align: center; vertical-align: middle">Contacts</td>
 			</tr>
-			<tr style="border-bottom: 1px solid black">
-				<td style="text-align: center; background: gray; color: white" colspan="3">
-					<p style="padding: 12px 0">
-						<span style="margin-left: 8px; padding-left: 8px">5th june 2022</span>
-						<span style="margin-left: 8px; border-left: 1px solid white; padding-left: 8px">EDIT Template</span>
-						<span style="margin-left: 8px; border-left: 1px solid white; padding-left: 8px">123-132-123123</span>
+			<tr>
+				<td colspan="6" style="text-align: center; padding: 24px 0">
+					<h1 style="font-size: 20px; font-weight: bold; line-height: 150%">
+						15 Ecommerce business tips that will actually make your like better
+					</h1>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="6">
+					<picture style="height: 200px; overflow: hidden; display: block"
+						><img
+							style="width: 100%; object-position: bottom"
+							src="https://images.unsplash.com/photo-1683009427042-e094996f9780?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80"
+							alt=""
+					/></picture>
+					<p style="padding: 24px 12px">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto tenetur dolore sint, quaerat dicta
+						soluta nobis necessitatibus! Odio, vel. Accusamus, nostrum? Suscipit ullam dicta corrupti. Officiis quis.
 					</p>
 				</td>
 			</tr>
 			<tr>
-				<td colspan="3">
-					<picture>
-						<img
-							style="width: 100%"
-							width="100"
-							src="https://images.unsplash.com/photo-1683009427042-e094996f9780?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80"
-						/>
-					</picture>
+				<td colspan="2" style="padding: 12px">
+					<h3 style="font-weight: bold; margin-bottom: 12px">Schedule</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae in illum quos illo incidunt voluptatem
+						doloribus nulla reiciendis aut enim!
+					</p>
+				</td>
+				<td colspan="2" style="padding: 12px">
+					<h3 style="font-weight: bold; margin-bottom: 12px">Build</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae in illum quos illo incidunt voluptatem
+						doloribus nulla reiciendis aut enim!
+					</p>
+				</td>
+				<td colspan="2" style="padding: 12px">
+					<h3 style="font-weight: bold; margin-bottom: 12px">Customers</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae in illum quos illo incidunt voluptatem
+						doloribus nulla reiciendis aut enim!
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="6">
+					<p style="padding: 24px 12px">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto tenetur dolore sint, quaerat dicta
+						soluta nobis necessitatibus! Odio, vel. Accusamus, nostrum? Suscipit ullam dicta corrupti. Officiis quis,
+						ipsam reprehenderit rem ratione corrupti, a consectetur ab dolor qui soluta pariatur sapiente, odio quaerat
+						neque quae nulla nam sunt blanditiis culpa dolorum asperiores nobis. Maiores saepe, maxime necessitatibus
+						debitis odit perspiciatis aut expedita quod explicabo tenetur enim esse quidem vero corporis incidunt.
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="6" style="margin: 0 auto; text-align: center; padding: 12px 0">
+					<button style="padding: 12px 8px; border: 0; border-radius: 4px">Read the full article</button>
 				</td>
 			</tr>
 		</table>
