--- a/examples/atomic-example/index.html
+++ b/examples/atomic-example/index.html
@@ -8,6 +8,52 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<div class="card flex flex-col gap-md">
+			<div class="card__header">
+				<div class="avatar__group">
+					<div class="avatar avatar--square">
+						<img
+							src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqtAws3dXg9VmWQG3EO4_8_0mxkbDM5V1skhWNgPXInA&s"
+							alt=""
+						/>
+					</div>
+					<div class="avatar avatar--square">
+						<img
+							src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqtAws3dXg9VmWQG3EO4_8_0mxkbDM5V1skhWNgPXInA&s"
+							alt=""
+						/>
+					</div>
+				</div>
+			</div>
+			<h4 class="headline">Updated user flows with UX feedback from Session #245</h4>
+			<div class="card__dates">
+				<span color="gray-300">Start</span>
+				<span class="gray-700">Dec 12</span>
+
+				<span color="gray-300">End</span>
+				<span class="gray-700">Dec 12</span>
+			</div>
+			<div class="bar">
+				<div class="bar__container">
+					<div class="bar__value"></div>
+				</div>
+			</div>
+			<div class="flex align-center justify-between">
+				<div class="">
+					<span color="gray-100">Last Updated:</span>
+					<span class="gray-500">10 Dec, 2022</span>
+				</div>
+
+				<div class="avatar__group">
+					<div class="avatar avatar--sm">
+						<img src="https://randomuser.me/api/portraits/men/35.jpg" alt="" />
+					</div>
+					<div class="avatar avatar--sm">
+						<img src="https://randomuser.me/api/portraits/men/35.jpg" alt="" />
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="flex controls">
 			<button id="trigger-atoms">atoms</button>
 			<button id="trigger-molecules">molecules</button>
