--- a/examples/responsive-grid/index.html
+++ b/examples/responsive-grid/index.html
@@ -34,8 +34,8 @@
 		</div>
 
 		<div class="row">
-			<div class="col-lg-4">col</div>
-			<div class="col-lg-8">col</div>
+			<div class="col-lg-4">col 2</div>
+			<div class="col-lg-8">col 2</div>
 		</div>
 
 		<div class="container">
